<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edt_bank"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom_edit_text_two"
        android:cursorVisible="false"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:focusable="false"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/bank"
        android:inputType="none"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edt_no_rek"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edit_text_two"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/no_rekening"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edt_amount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_edit_text_two"
        android:digits="0123456789,."
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_background"
            android:enabled="false"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/send"
            android:textColor="@color/white" />

    </androidx.cardview.widget.CardView>

</LinearLayout>