<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_700"
    tools:context=".view.activity.ChattingUserActivity">

    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image_arrow_back"
            android:src="@drawable/ic_arrow_back" />

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/image_profile"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="Abdan Zaki Alifian" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_header"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_background">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_chatting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/cv_edit_message"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_edit_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"
            app:cardCornerRadius="20dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_message"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@id/btn_send"
                    android:background="@null"
                    android:hint="@string/write_a_message"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:textSize="14sp" />

                <ImageButton
                    android:id="@+id/btn_send"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/custom_send"
                    android:contentDescription="@string/image_send"
                    android:paddingStart="10dp"
                    android:paddingEnd="6dp"
                    android:src="@drawable/ic_chatting" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>